--- a/src/main/resources/plugin-descriptor.properties
+++ b/src/main/resources/plugin-descriptor.properties
@@ -20,27 +20,27 @@
 description='komoran tokenizer for elasticsearch'
 #
 # 'version': plugin's version
-version='3.3.4'
+version=3.3.4
 #
 # 'name': the plugin name
-name='komoran tokenizer'
+name=komoran-tokenizer
 #
 
 # 'classname': the name of the class to load, fully-qualified.
-classname=${classname}
+classname=kr.co.shineware.nlp.elasticsearch.plugin.KomoranPlugin
 #
 # 'java.version': version of java the code is built against
 # use the system property java.specification.version
 # version string must be a sequence of nonnegative decimal integers
 # separated by "."'s and may have leading zeros
-java.version=${javaVersion}
+java.version=1.8
 #
 # 'elasticsearch.version': version of elasticsearch compiled against
-elasticsearch.version=${elasticsearchVersion}
+elasticsearch.version=7.4.1
 ### optional elements for plugins:
 #
 #  'extended.plugins': other plugins this plugin extends through SPI
-extended.plugins=${extendedPlugins}
+#extended.plugins=${extendedPlugins}
 #
 # 'has.native.controller': whether or not the plugin has a native controller
-has.native.controller=${hasNativeController}
+#has.native.controller=${hasNativeController}
